corrected the about panel header

--- a/kaid.html
+++ b/kaid.html
@@ -352,7 +352,7 @@
             `;
 
             function showAboutContent() {
-                panelHeaderContent.innerHTML = `<h2 id="panel-header-title">About 'loser'</h2>`;
+                panelHeaderContent.innerHTML = `<h2 id="panel-header-title">About 'kaid'</h2>`;
                 annotationContentArea.innerHTML = `<div class="p-6">${aboutSongText}</div>`;
                 if (activeAnnotationId) {
                     document.querySelectorAll(`[data-annotation-id='${activeAnnotationId}'].active`).forEach(el => el.classList.remove('active'));
