--- a/khoj.html
+++ b/khoj.html
@@ -336,7 +336,7 @@
             `;
 
             function showAboutContent() {
-                panelHeaderContent.innerHTML = `<h2 id="panel-header-title">About 'degenerate'</h2>`;
+                panelHeaderContent.innerHTML = `<h2 id="panel-header-title">About 'khoj'</h2>`;
                 annotationContentArea.innerHTML = `<div class="p-6">${aboutSongText}</div>`;
                 if (activeAnnotationId) {
                     document.querySelectorAll(`[data-annotation-id='${activeAnnotationId}'].active`).forEach(el => el.classList.remove('active'));
