--- a/jaan_dao.html
+++ b/jaan_dao.html
@@ -337,7 +337,7 @@
             `;
 
             function showAboutContent() {
-                panelHeaderContent.innerHTML = `<h2 id="panel-header-title">About 'aitbaar'</h2>`;
+                panelHeaderContent.innerHTML = `<h2 id="panel-header-title">About 'jaan dao'</h2>`;
                 annotationContentArea.innerHTML = `<div class="p-6">${aboutSongText}</div>`;
                 if (activeAnnotationId) {
                     document.querySelectorAll(`[data-annotation-id='${activeAnnotationId}'].active`).forEach(el => el.classList.remove('active'));
