--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         /* --- Hero Section --- */
         .hero-section {
-            height: 100vh;
+            height: 100dvh;
             position: relative;
             display: flex;
             align-items: center;
